WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109683
Column rules not affected by scroll offset
https://bugs.webkit.org/show_bug.cgi?id=109683
Summary
Column rules not affected by scroll offset
Morten Stenshorne
Reported
2013-02-13 05:10:13 PST
Created
attachment 188060
[details]
Testcase If a multicol container has scrollable overflow, the column rules are not scrolled along with the content; instead they remain "fixed".
Attachments
Testcase
(881 bytes, text/html)
2013-02-13 05:10 PST
,
Morten Stenshorne
no flags
Details
Corrected testcase
(884 bytes, text/html)
2013-02-15 07:48 PST
,
Morten Stenshorne
no flags
Details
Patch
(5.31 KB, patch)
2013-02-27 01:19 PST
,
Morten Stenshorne
no flags
Details
Formatted Diff
Diff
Patch
(5.31 KB, patch)
2014-04-24 10:02 PDT
,
Morten Stenshorne
no flags
Details
Formatted Diff
Diff
Patch
(28.51 KB, patch)
2014-04-25 13:58 PDT
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Morten Stenshorne
Comment 1
2013-02-15 07:48:03 PST
Created
attachment 188570
[details]
Corrected testcase
Morten Stenshorne
Comment 2
2013-02-27 01:19:52 PST
Created
attachment 190464
[details]
Patch
Brent Fulgham
Comment 3
2014-04-24 09:27:52 PDT
Comment on
attachment 190464
[details]
Patch I'm sorry we didn't review this sooner. It seems like a good change, but now needs to be adjusted a bit to apply cleanly (since a year has past!) Would you be willing to rebaseline the patch so we could push it through?
Morten Stenshorne
Comment 4
2014-04-24 10:01:45 PDT
Sure!
Morten Stenshorne
Comment 5
2014-04-24 10:02:49 PDT
Created
attachment 230090
[details]
Patch
Morten Stenshorne
Comment 6
2014-04-24 10:08:42 PDT
Ooh... Hyatt not CCed. Now he is. :) Fixing the old multicol implementation at this point is rather unimportant, of course, but I thought at least the test would be nice to have.
Dave Hyatt
Comment 7
2014-04-25 13:29:26 PDT
This actually fails with the new multicolumn code now that I changed rule painting! Good catch! Let me make a patch for the new code (the old code doesn't matter).
Dave Hyatt
Comment 8
2014-04-25 13:47:38 PDT
Note column rules don't respect overflow:hidden clips in either old or new versions. We will need a bug on that too, and it's a bit harder to fix. :(
Dave Hyatt
Comment 9
2014-04-25 13:58:39 PDT
Created
attachment 230196
[details]
Patch
Dave Hyatt
Comment 10
2014-04-25 14:06:29 PDT
Fixed in
r167820
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug