Column rules not respecting scroll offsets. https://bugs.webkit.org/show_bug.cgi?id=109683

Reviewed by Dean Jackson.


Source/WebCore:
Added fast/multicol/scrolling-column-rules.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintColumnRules):
Make paintColumnRules virtual so that it works with both column implementations.

(WebCore::RenderBlock::paintObject):
Changed to call paintColumnRules with the adjusted scroll offset and to do it after
bailing on the root background only check.

* rendering/RenderBlock.h:
paintColumnRules is now virtual.

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::paintColumnRules):
(WebCore::RenderBlockFlow::paintBoxDecorations): Deleted.
* rendering/RenderBlockFlow.h:
Got rid of paintBoxDecorations override since it failed when hasBoxDecorations was false
anyway. Override paintColumnRules instead to paint at the right time.

LayoutTests:
* fast/multicol/scrolling-column-rules.html: Added.
* platform/mac/fast/multicol/scrolling-column-rules-expected.png: Added.
* platform/mac/fast/multicol/scrolling-column-rules-expected.txt: Added.



Canonical link: https://commits.webkit.org/150233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167820 268f45cc-cd09-0410-ab3c-d52691b4dbfc